# simpleUWSGIServer

./: README.md  my_server.py  pyproject.toml  uwsgi.ini
