[tool.poetry]
name = "simpleuwsgiserver"
version = "0.1.0"
description = ""
authors = ["maximiglinrest <maximiglinrest@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uWSGI = "^2.0.20"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
